assets/css/style.css
@import url("https://fonts.googleapis.com/css2?family=Clicker+Script&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

:root {
  --bg-black-900: #f2f2fc;
  --bg-black-100: #fdf9ff;
  --bg-black-50: #e8dfec;
  --text-black-900: #302e4d;
  --text-black-700: #504e70;
}

body {
  line-height: 1.5;
  font-size: 16px;
  font-family: "Poppins" sans-serif;
  padding: 0;
  margin: 0;
}

* {
  margin: 0;
  padding: 0;
  outline: none;
  text-decoration: none;
  box-sizing: border-box;
}

::before,
::after {
  box-sizing: border-box;
}
ul {
  list-style: none;
}

.section {
  background-image: url(../img/woow.png);
  min-height: 100vh;
  display: block;
  padding: 0 30px;
  opacity: 1;
}

.main-content {
  padding-left: 270px;
}
.padd-15 {
  padding-left: 15px;
  padding-right: 15px;
}
.container {
  max-width: 1100px;
  width: 100%;
  margin: auto;
}
.section .container {
  padding-top: 60px;
  padding-bottom: 70px;
}
.section-title {
  flex: 0 0 100%;
  max-width: 100%;
  padding: 15px;
  margin-bottom: 60px;
}
.section-title h2 {
  font-size: 40px;
  color: var(--text-black-900);
  font-weight: 700;
  position: relative;
}
.section-title h2::before {
  content: "";
  height: 4px;
  width: 50px;
  background-color: #c31a6e;
  position: absolute;
  top: 100%;
  left: 0;
}
.section-title h2::after {
  content: "";
  height: 4px;
  width: 25px;
  background-color: #c31a6e;
  position: absolute;
  top: 100%;
  left: 0;
  margin-top: 8px;
}
.row {
  display: flex;
  flex-wrap: wrap;
  margin-left: -15px;
  margin-right: -15px;
  position: relative;
}
.btn {
  font-size: 15px;
  font-family: "Poppins";
  font-weight: 500;
  padding: 12px 20px;
  color: #e8dfec;
  border-radius: 40px;
  display: inline-block;
  white-space: nowrap;
  border: none;
  background: #c31a6e;
  transition: all 0.3s ease;
}
.btn:hover {
  transform: scale(1.05);
}
/* aside */
.aside {
  width: 270px;
  background: var(--bg-black-100);
  position: fixed;
  left: 0;
  top: 0;
  padding: 30px;
  height: 100%;
  border-right: 1px solid var(--bg-black-100);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 10;
}

.aside .logo {
  position: absolute;
  top: 50px;
  font-size: 30px;
  text-transform: capitalize;
}
.aside .logo a {
  color: var(--text-black-900);
  font-weight: 700;
  background: var(--bg-black-100);
  padding: 15px 20px;
  font-size: 30px;
  letter-spacing: 5px;
  position: relative;
  color: #c31a6e;
}
.aside .logo a span {
  font-family: "Clicker Script", cursive;
  font-size: 40px;
  color: #302e4d;
}

.aside .logo a::before {
  content: "";
  position: absolute;
  width: 20px;
  height: 20px;
  border-bottom: 5px solid black;
  border-left: 5px solid black;
  bottom: 0;
  left: 0;
}
.aside .logo a::after {
  content: "";
  position: absolute;
  width: 20px;
  height: 20px;
  border-top: 5px solid black;
  border-right: 5px solid black;
  top: 0;
  right: 0;
}
.aside .nav-toggler {
  height: 40px;
  width: 45px;
  border: 1px solid var(--bg-black-50);
  cursor: pointer;
  position: fixed;
  left: 300px;
  top: 20px;
  border-radius: 5px;
  background: var(--bg-black-100);
  display: none;
  align-items: center;
  justify-content: center;
}
.aside .nav-toggler span {
  height: 2px;
  width: 18px;
  background: black;
  display: inline-block;
  position: relative;
}
.aside .nav-toggler span::before {
  content: "";
  height: 2px;
  width: 18px;
  background: black;
  position: absolute;
  top: -6px;
  left: 0;
}
.aside .nav-toggler span::after {
  content: "";
  height: 2px;
  width: 18px;
  background: black;
  position: absolute;
  top: 6px;
  left: 0;
}
.aside .nav {
  margin-top: 50px;
}
.aside .nav li {
  margin-bottom: 20px;
  display: block;
}
.aside .nav li a {
  font-size: 16px;
  font-weight: 600;
  display: block;
  border-bottom: 1px solid rgb(206, 199, 199);
  color: black;
  padding: 5px 15px;
}

.aside .nav li a.active {
  color: #c31a6e;
}
.aside .nav li a i {
  margin-right: 15px;
}
/* home */
.home {
  min-height: 100vh;
  display: flex;
  color: var(--text-black-900);
}
.home .home-info {
  flex: 0 0 60%;
  max-width: 60%;
  padding: 10px;
  padding-top: 100px;
}
h3.hello {
  font-size: 40px;
  margin: 15px 0;
}
h3.hello span {
  font-family: "Clicker Script", cursive;
  font-size: 40px;
  font-weight: 700;
  color: #c31a6e;
}
h3.my-course {
  font-size: 28px;
  margin: 15px 0;
}
.typing {
  color: #c31a6e;
}
.home-info p {
  margin-bottom: 35px;
  font-size: 20px;
  color: var(--text-black-700);
}
.home .home-img {
  flex: 0 0 40%;
  max-width: 40%;
  padding: 10px;
  text-align: center;
  position: relative;
}

.home .home-img img {
  height: 500px;
}

.social-media {
  margin-top: 1rem; /* Adjust spacing from the footer content */
  padding-top: 80px;
}

.social-media a {
  color: rgb(149, 149, 149); /* Icon color */
  font-size: 1.5rem; /* Icon size */
  margin: 0 0.5rem; /* Adjust horizontal spacing between icons */
  transition: color 0.3s ease; /* Smooth transition for color change */
}

.social-media a:hover {
  color: #f89ed1; /* Color on hover */
}

.social-media a:hover i {
  transform: scale(1.2); /* Scale up the icon on hover */
}

